V 1.531 updated  productSection and Header In header changed gap In productSection Fixed productSectionHead's owerflow-x and fixed productSectionContent's owerflow-y

--- a/src/comnponents/Carusel/Carusel.module.scss
+++ b/src/comnponents/Carusel/Carusel.module.scss
@@ -21,10 +21,10 @@ $lg-textcolor: rgb(85, 85, 85);
   @media (max-width: 1100px) {
     --columns: 3;
   }
-  @media (max-width: 800px) {
+  @media (max-width: 860px) {
     --columns: 2;
   }
-  @media (max-width: 525px) {
+  @media (max-width: 570px) {
     --columns: 1;
   }
   
