--- a/src/comnponents/GlobalComnponets/Title/Title.module.scss
+++ b/src/comnponents/GlobalComnponets/Title/Title.module.scss
@@ -1,5 +1,5 @@
 h2 {
-    font-size: 2em;
+    font-size: 32px;
     font-weight: 800;
     position: relative;
     &::after {
@@ -13,5 +13,16 @@ h2 {
         background-color: #7fad39;
         color: #7fad39;
         position: absolute;
+    }
+    @media only screen and (max-width: 700px) {
+        font-size: 28px;
+    }
+    
+    @media only screen and (max-width: 500px) {
+        font-size: 22px;
+    }
+    
+    @media only screen and (max-width: 300px) {
+        font-size: 18px;
     }
 }
